subnets.tf
resource "aws_subnet" "public_subnet_n1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "Public-Subnet-n1"
  }
}

resource "aws_subnet" "public_subnet_n2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "ap-south-1b"
  map_public_ip_on_launch = true
  tags = {
    Name = "Public-Subnet-n2"
  }
}

resource "aws_subnet" "private_subnet_n1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.3.0/24"
  availability_zone = "ap-south-1a"
  tags = {
    Name = "Private-Subnet-n1"
  }
}

resource "aws_subnet" "private_subnet_n2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.4.0/24"
  availability_zone = "ap-south-1b"
  tags = {
    Name = "Private-Subnet-n2"
  }
}
